# madad-soha

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
backups/: db_backup_20250527_145457.sqlite3
core/: config.py  settings.py  urls.py
core/data/: .env.example
main/: admin.py  apps.py  google.py  models.py  resources.py  signals.py  urls.py  utils.py  views.py
main/management/commands/: add_options.py  add_scores.py  add_specialties.py  clear_tables.py  generate_useroptions.py  generate_userquiz.py  load_scores.py
main/templates/admin/main/option/: change_list.html
shared/: models.py
user/: admin.py  models.py
